# SemanticNG

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  MISSION.md  Makefile  README.md  ROADMAP.md  environment.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.codex/: config.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md  required-checks-main.json  test_surface_manifest.json
.github/ISSUE_TEMPLATE/: 01-enforce-no-merge-on-red.md  02-roadmap-manifest-parity-drift.md  03-policy-surface-formatting-hardening.md  04-readme-quality-gates-enforcement-truth.md  05-dependabot-failure-triage.md
.github/scripts/: aggregate_precommit_failure_learning.py  analyze_script_scope_complexity.py  audit_branch_protection.py  capability_parity_report.py  check_no_regression_budget.py  check_precommit_parity.py  check_python_support_policy.py  check_root_scratch_files.py  classify_precommit_failures.py  inventory_script_entrypoints.py  mypy_override_inventory.py  print_env_provenance.py  reliability_report.py  render_toolchain_parity_docs.py  render_transition_evidence.py  required_check_sentinel.py  run_hook_parity_with_diagnostics.py  run_precommit_governance_checks.py  run_promotion_checks.sh  select_milestone_test_commands.py  update_script_analytics_handoff.py  validate_doc_freshness_slo.py  validate_governance_docs_schema.py  validate_governance_sync.py  validate_milestone_docs.py  validate_no_regression_budget_update.py  validate_script_docs_parity.py  validate_sprint_handoff.py  workflow_policy_drift_report.py
.github/workflows/: branch-protection-audit.yml  precommit-learning-loop-weekly.yml  quality-guardrails.yml  required-check-regression-sentinel.yml  state-renorm-milestone-gate.yml  toolchain-parity-weekly.yml
artifacts/: transition_evidence.txt
demos/: __init__.py  run_scenario_sessions.py
demos/output/: session_report.json
demos/reporting/: __init__.py  convergence.py
demos/scenario_packs/: ontology_schema_alignment.json  safety_critical_instruction.json  scheduling.json
docs/: 5s_mission_traceability.md  AXIOMS.md  DEVELOPMENT.md  DOCTRINE_5S.md  README.md  architecture-map.md  branch_protection_audit.md  definition_of_complete.md  dev_toolchain_parity.md  doc_freshness_slo.json  documentation_change_control.md  dod_manifest.json  editor_setup.md  guardrails_and_invariants.md  hitl_protocol.md  integration_notes.md  invariant_gate_coverage_audit.md  mypy_debt.md  no_regression_budget.json  no_regression_budget_update_policy.md  no_regression_budget_update_request.json  observation_freshness_episode_replay.md  observer_authorization_evidence.md  project_maturity_evaluation.md  purpose_maturity_audit_2026-03-25.md  python_version_analysis.md  quality_feedback_architecture_scorecard.md  quality_learning_loop.md  release_checklist.md  repository_state_evaluation.md  sprint_plan_5x.md  status_truth_contract.md  system_contract_map.md  testing_framework_sprint_plan.md  toolchain_parity_policy.json  workflow_command_policy.json
docs/ci/: reproduce-quality-guardrails.md
docs/directives/: MILESTONE-SOURCE-OF-TRUTH.json  MILESTONE-SOURCE-OF-TRUTH.md  README.md
docs/ontology/: 01-ontology-portfolio-catalogue.md  02-gap-taxonomy-reference.md  03-test-family-matrix.md  04-posting-cluster-authority-draft.md  05-posting-annotation-worksheet.md  06-gap-ledger-schema.md  07-process-execution-guide.md
docs/process/: 5s_metrics.json  5s_metrics.md  main-health-review-checklist.md  quality-gate-policy.md  quality_stage_commands.json  script_entrypoints_catalog.md  script_entrypoints_inventory.json  script_scope_complexity.md  script_scope_complexity_baseline.json  script_scope_complexity_waivers.json  script_surfaces_unused_code_baseline.json
docs/sprint_handoffs/: README.md  mypy-debt-5-sprint-timeline.md  script-analytics-5-sprint-plan.md  sprint-5-handoff.md  sprint-handoff-template.md
docs/status/: milestones.json  objectives.json  project.json  schema_contract.json  sprints.json
docs/typing/: mypy-backlog.md
gaps/: ledger.yaml
ideas/: Convergence.txt  Here are the first biggest frictions we could find.txt  idea-selection-protocol.md  model-proposal.md  predict-demo.txt  predict-record.txt
scripts/ci/: apply_precommit_patch.sh  check_core_isolation_protocol.py  check_toolchain_parity.py  derive_ci_run_name.py  run_stage_checks.py  scan_unused_code.py  validate_5s_metrics.py  validate_5s_mission_traceability.py  validate_decision_records.py  validate_program_sync.py  validate_workflow_topology.py
scripts/dev/: bootstrap_preflight.py  read_model_report.py  render_directive.py  render_status_from_manifest.py  status_report.py  (+2 more)
src/: pizza.owl
tests/: README.md  conftest.py  test_5s_mission_traceability.py  test_ask_outbox_contracts.py  test_bootstrap_preflight.py  test_capability_adapter_policy_guards.py  test_capability_adapter_surface_policy_guards.py  test_capability_invocation_governance.py  test_capability_parity_report.py  test_capture_outcome_states.py  test_check_core_isolation_protocol.py  test_ci_run_name_derivation.py  test_ci_toolchain_parity_script.py  test_context_snapshot_artifacts.py  test_contracts_belief_state.py  test_contracts_decision_effect_shape.py  test_contracts_halt_record.py  test_contracts_schema_selection.py  test_contracts_time_travel_answer.py  test_core_boundary_policy.py  test_decision_record_schema.py  test_demo_runner.py  test_doc_freshness_slo.py  test_dod_manifest.py  test_editor_setup_governance.py  test_engine_calls_selector_with_generic_error.py  test_engine_optional_gherkin_imports.py  test_engine_pending_obligation.py  test_engine_pending_obligation_minimal.py  test_engine_projection_mission_loop.py  test_governance_doc_parity.py  test_governance_pr_evidence_validator.py  test_halt_boundary_contract.py  test_hitl_protocol.py  test_invariants.py  test_milestone_test_selector.py  test_mission_creation_acceptance.py  test_mission_prompt_scheduler_contracts.py  test_mypy_override_inventory.py  test_no_regression_budget_policy.py  (+45 more)
(+72 files in other folders)
