[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticng"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "mypy>=1.9,<2",
  "ruff>=0.6,<1",
  "pytest-cov>=5,<6",
  "pre-commit>=4,<5",
  "gherkin-official>=30,<31",
]
bdd = [
  "behave>=1.2.6,<2",
  "deeponto>=0.9,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--maxfail=1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501", # formatter owns line wrapping
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]

[tool.mypy]
# Mypy policy tiers:
# - Tier 1 (strict): core domain logic under src/state_renormalization/**
# - Tier 2 (moderate): Behave step glue under src/features/steps/**
# - Tier 3 (relaxed): tests/**
#
# Keep global defaults strict so new production modules start from strong typing.
# Then relax only the rules that are impractical for dynamic test/BDD glue code.
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
files = ["src/state_renormalization", "src/features/steps", "tests"]
pretty = true
show_error_codes = true

# If your project imports optional deps in some modules:
ignore_missing_imports = false

# Tier 2: Behave step glue often relies on dynamic decorators/context objects.
# Keep strict mode on, but disable only the checks that are noisy for this layer.
[[tool.mypy.overrides]]
module = "src.features.steps.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = false

# Tests often use duck-typing/fakes:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_generics = false
check_untyped_defs = false
strict = false

[tool.coverage.run]
branch = true
source = ["src/state_renormalization"]
omit = [
  "tests/*",
  "src/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
