[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticng"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "mypy>=1.9,<2",
  "ruff>=0.6,<1",
  "pytest-cov>=5,<6",
  "pre-commit>=4,<5",
  "gherkin-official>=30,<31",
]
bdd = [
  "behave>=1.2.6,<2",
  "deeponto>=0.9,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--maxfail=1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501", # formatter owns line wrapping
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
files = ["src/state_renormalization", "tests"]
pretty = true
show_error_codes = true

# If your project imports optional deps in some modules:
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
  "steps",
  "index_steps",
  "ontology_steps",
]
# Legacy BDD glue code with optional deps (behave/deeponto) and dynamic context objects.
# Keep strict checks in core modules while deferring this suite.
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
disable_error_code = ["arg-type", "misc", "type-arg", "typeddict-unknown-key", "import-not-found"]

# Tests often use duck-typing/fakes:

[[tool.mypy.overrides]]
module = ["behave", "deeponto", "deeponto.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_generics = false
check_untyped_defs = false
strict = false

[tool.coverage.run]
branch = true
source = ["src/state_renormalization"]
omit = [
  "tests/*",
  "src/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
