[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticng"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
  "typing-extensions>=4.7,<5",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "mypy>=1.9,<2",
  "ruff>=0.6,<1",
  "pytest-cov>=5,<6",
  "pre-commit>=4,<5",
  "gherkin-official>=30,<31",
  "typing-extensions>=4.7,<5",
]
bdd = [
  "behave>=1.2.6,<2",
  "deeponto>=0.9,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools_scm]
version_file = "src/semanticng/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--maxfail=1",
]
markers = [
  "contract_sensitive: engine/contracts/adapters tests that assert canonical runtime contracts",
  "general_behavior: broader behavior/regression tests that are not contract-boundary focused",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501", # formatter owns line wrapping
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]
"src/state_renormalization/_compat.py" = ["UP035"]

[tool.semanticng.mypy_tiers]
# Canonical mypy scope tiers. Keep [tool.mypy].files, pre-commit hook args,
# and developer docs aligned to these lists.
tier1_strict = ["src/state_renormalization", "src/core"]
tier2_extended = ["src", "tests"]
tier2_tests_contract_sensitive = [
  "tests/test_engine_*.py",
  "tests/test_contracts_*.py",
  "tests/test_capability_adapter_*.py",
  "tests/test_ask_outbox_contracts.py",
  "tests/test_predictions_contracts_and_gates.py",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
# Tier 1 (strict, pre-commit): core/application modules only.
# Keep this set intentionally narrow so local hooks stay fast and deterministic.
files = ["src/state_renormalization", "src/core"]
pretty = true
show_error_codes = true

# If your project imports optional deps in some modules:
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["semanticng.bdd_compat", "semanticng.deeponto_compat"]
# Optional third-party adapters are isolated here. Any importlib-dynamic edges stay
# at this boundary so step modules can remain fully typed.
warn_return_any = false

[[tool.mypy.overrides]]
module = [
  "src.features.steps.*",
  "steps",
  "index_steps",
  "ontology_steps",
]
# BDD step glue is legacy/dynamic integration code (behave context + optional deps).
# Keep relaxations tightly bounded to this namespace so strict typing remains the
# default for production modules.
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
# Tests prioritize readability and controlled fakes over full annotation coverage.
# Relax only the noisiest strict rules needed for this tier while preserving basic
# signal (e.g. import/type checking for annotated code).
strict = false
disallow_any_generics = false
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false

[tool.coverage.run]
branch = true
source = ["src/state_renormalization"]
omit = [
  "tests/*",
  "src/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
